--- a/src/test/python/resources/config/brands11.yml
+++ b/src/test/python/resources/config/brands11.yml
@@ -1,10 +1,4 @@
 brands:
 
-- name: financix
-  config_file: financix.yml
-
-- name: alferatrade
-  config_file: alferatrade.yml
-
-- name: wdcmarkets
-  config_file: wdcmarkets.yml
+- name: uprofx
+  config_file: uprofx.yml
