--- a/src/test/python/resources/config/tests_sanity.yml
+++ b/src/test/python/resources/config/tests_sanity.yml
@@ -11,22 +11,22 @@ tests_config:
   tests:
     - test_make_deposit_crm  # create live account and make a deposit into a trading account from the crm
 
-#- module: src.test.python.ui.automation.implementation.api.Test_API
-#  class: TestAPI
-#  tests:
+- module: src.test.python.ui.automation.implementation.api.Test_API
+  class: TestAPI
+  tests:
 #    - test_create_lead_api
-#    - test_create_new_customer
+    - test_create_new_customer
 
 #- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
 #  class: SignUpTest
 #  tests:
 #    - test_check_sign_up
-#
+
 #- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
 #  class: AddNewAccountTestCA
 #  tests:
 #    - test_add_live_account_ca
-#
+
 #- module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
 #  class: TestPagesCA
 #  tests:
