--- a/src/test/python/resources/config/tests5.yml
+++ b/src/test/python/resources/config/tests5.yml
@@ -21,3 +21,17 @@ tests_config:
   class: SearchingClientsTestCRM
   tests:
     - test_make_searching_client_module   # Searches for a client.
+
+############################################# TASKS ##################################################
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
+  class: AddInteraction
+  tests:
+    - test_add_interaction  # Adds an interaction for a client
+    - test_interaction_search   # Searches for an interaction for a client. Validates that only one result is returned.
+
+- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
+  class: AddEventTaskModule
+  tests:
+    - test_add_event
+    - test_edit_event
+    - test_delete_interaction
