--- a/src/test/python/resources/config/tests9.yml
+++ b/src/test/python/resources/config/tests9.yml
@@ -1,10 +1,10 @@
 tests_config:
 
-############################################ CLIENTS ################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
-  class: SearchingClientsTestCRM
+##################################### CRM CONFIGURATIONS #########################################
+- module: src.test.python.ui.automation.implementation.crm.tests_crm_configuration.Test_CRM_Configurations
+  class: CRMConfigurationsTest
   tests:
-    - test_make_searching_client_module   # Searches for a client.
+    - test_crm_configurations_pages_loading
 
 ########################################### CONVERT LEAD ############################################
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
@@ -35,3 +35,9 @@ tests_config:
   class: SendEmailTestCRM
   tests:
     - test_send_email # preconditions: convert lead
+
+############################################ CLIENTS ################################################
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
+  class: SearchingClientsTestCRM
+  tests:
+    - test_make_searching_client_module   # Searches for a client.
