--- a/src/test/python/resources/config/tests3.yml
+++ b/src/test/python/resources/config/tests3.yml
@@ -1,19 +1,17 @@
 tests_config:
 
-############################################ DOCUMENTS MODULE ###############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
-  class: DocumentModuleTest
+###################################### MODULES ARE OPENS #########################################
+- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
+  class: CheckModules
   tests:
-    - test_searching_by_columns
-    - test_open_tabs
-    - test_sorting
+    - test_check_dashboard
+    - test_check_leaderboard
+    - test_check_user_management
+    - test_my_dashboard_loading
+    - test_audit_logs_loading
 
-######################################## FILTERS TESTS ###############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
-  class: FilterModulesTest
+##################################### CRM CONFIGURATIONS #########################################
+- module: src.test.python.ui.automation.implementation.crm.tests_crm_configuration.Test_CRM_Configurations
+  class: CRMConfigurationsTest
   tests:
-    - test_create_filter_clients_module
-    - test_create_filter_documents_module
-    - test_create_filter_leads_module
-    - test_create_filter_help_desk
-    - test_create_filter_trading_account_module
+    - test_crm_configurations_pages_loading
