--- a/src/test/python/resources/config/tests9.yml
+++ b/src/test/python/resources/config/tests9.yml
@@ -1,43 +1,15 @@
 tests_config:
 
-##################################### CRM CONFIGURATIONS #########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_crm_configuration.Test_CRM_Configurations
-  class: CRMConfigurationsTest
+########################################### USER MANAGEMENT ############################################
+- module: src.test.python.ui.automation.implementation.crm.user_management.Test_User_Management
+  class: UserManagementTest
   tests:
-    - test_crm_configurations_pages_loading
+    - test_create_delete_user
 
-########################################### CONVERT LEAD ############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
+############################################ DOCUMENTS MODULE ###############################################
+- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
+  class: DocumentModuleTest
   tests:
-    - test_perform_convert_lead   # Creates a lead and converts it to a client
-
-########################################## CLIENT'S DETAILS ##########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
-  class: TradingAccountCrmTest
-  tests:
-    - fill_questioner_new_client
-    - test_crm_open_trading_account  # open a new trading account
-
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
-  class: MassEditTestCRM
-  tests:
-    - test_update_client_details
-
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Change_Password
-  class: ChangePasswordTestCRM
-  tests:
-    - test_change_client_password_from_crm  # change a client account password from the crm
-    - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
-
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Send_Email
-  class: SendEmailTestCRM
-  tests:
-    - test_send_email # preconditions: convert lead
-
-############################################ CLIENTS ################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
-  class: SearchingClientsTestCRM
-  tests:
-    - test_make_searching_client_module   # Searches for a client.
+    - test_searching_by_columns
+    - test_open_tabs
+    - test_sorting
