--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -85,6 +85,9 @@ CreateLeadsProfilePage:
   save_button: "//input[@title='Save [Alt+S]']"
 CRMHomePage:
   leads_module_btn: "//span[@class='glyphicon glyphicon-Leads']"
+DragonPage:
+  number_text: "//div[@title='Click to Call']"
+  number_color_red: "//div[@title='Click to Call' and contains(@style,'color: red')]"
 TasksPage:
   pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
   subject_input: "//tr[@class='tableFilters']//td[15]//input"
