--- a/src/test/python/resources/config/tests_api.yml
+++ b/src/test/python/resources/config/tests_api.yml
@@ -16,5 +16,5 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
   class: CheckDragonTest
   tests:
-    - test_api_dragon_valid_phone
+#    - test_api_dragon_valid_phone
     - test_api_dragon_invalid_phone
