--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -29,13 +29,13 @@ tests_config:
 #    - test_trading_process_close_position_ca      # close position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
 #    - test_verify_close_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
 #
-- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
-  class: PersonalDetailsUpdateTestCA
-  tests:
-    - test_update_personal_details_in_ca
-    - test_personal_details_were_updated_in_crm
-    - test_update_personal_details_in_crm
-    - test_personal_details_were_updated_in_ca
+#- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
+#  class: PersonalDetailsUpdateTestCA
+#  tests:
+#    - test_update_personal_details_in_ca
+#    - test_personal_details_were_updated_in_crm
+#    - test_update_personal_details_in_crm
+#    - test_personal_details_were_updated_in_ca
 #
 #- module: src.test.python.ui.automation.implementation.ca.Test_Support_Ticket
 #  class: CreateSupportTicketTestCa
@@ -50,12 +50,12 @@ tests_config:
 #    - test_ca_dragon_valid_phone
 #    - test_ca_dragon_invalid_phone
 
-#- module: src.test.python.ui.automation.implementation.ca.Test_Stratton_Questionnaire
-#  class: StrattonQuestionnaire
-#  tests:
-#    - test_customer_classification_empty
-#    - test_customer_classification_blocked
-#    - test_customer_classification_negative
-#    - test_customer_classification_retail
-#    - test_customer_classification_professional_eligible
-#    - test_customer_classification_professional_elective
+- module: src.test.python.ui.automation.implementation.ca.Test_Stratton_Questionnaire
+  class: StrattonQuestionnaire
+  tests:
+    - test_customer_classification_empty
+    - test_customer_classification_blocked
+    - test_customer_classification_negative
+    - test_customer_classification_retail
+    - test_customer_classification_professional_eligible
+    - test_customer_classification_professional_elective
