--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -60,11 +60,11 @@ tests_config:
 #    - test_check_email_popup
 #
 ############################################ CONVERT LEAD ############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-#  directive: reload_configuration
-#  class: LeadModuleTest
-#  tests:
-#    - test_perform_convert_lead   # Creates a lead and converts it to a client
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+  directive: reload_configuration
+  class: LeadModuleTest
+  tests:
+    - test_perform_convert_lead   # Creates a lead and converts it to a client
 #
 ############################################# CLIENTS ################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
@@ -110,10 +110,10 @@ tests_config:
 #    - test_check_week_tab
 #
 ############################################### CLIENT'S DETAILS ##########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
-#  class: TradingAccountCrmTest
-#  tests:
-#    - fill_questioner_new_client
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
+  class: TradingAccountCrmTest
+  tests:
+    - fill_questioner_new_client
 #    - test_crm_open_trading_account  # open a new trading account
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Change_Password
@@ -173,10 +173,10 @@ tests_config:
 #    - test_check_search_via_button # Check search using search button
 #
 ############################################ CAMPAIGN MODULE ###############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_compaigns_module.Test_Campaigns_Module
-  class: CampaignsModuleTest
-  tests:
-    - test_create_campaign
+#- module: src.test.python.ui.automation.implementation.crm.tests_compaigns_module.Test_Campaigns_Module
+#  class: CampaignsModuleTest
+#  tests:
+#    - test_create_campaign
 #    - test_edit_campaign
 #    - test_delete_campaign
 #
