--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -1,12 +1,12 @@
 tests_config:
 
 ######################################### CA TESTS ##############################################
-- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-  class: SignUpTest
-  tests:
-    - test_check_sign_up
+#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+#  class: SignUpTest
+#  tests:
+#    - test_check_sign_up
 #    - test_check_email_sign_up
-    - test_registred_client_exist_in_crm
+#    - test_registred_client_exist_in_crm
 #
 #- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
 #  class: AddNewAccountTestCA
@@ -28,6 +28,10 @@ tests_config:
 #    - test_verify_open_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
 #    - test_trading_process_close_position_ca      # close position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
 #    - test_verify_close_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
+#    - test_open_position_live         # open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
+#    - test_verify_live_open_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
+#    - test_close_position_live      # close position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
+#    - test_verify_live_close_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
 #
 #- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
 #  class: PersonalDetailsUpdateTestCA
