--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -88,10 +88,6 @@ CRMHomePage:
 DragonPage:
   number_text: "//div[@title='Click to Call']"
   number_color_red: "//div[@title='Click to Call' and contains(@style,'color: red')]"
-TasksPage:
-  pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
-  subject_input: "//tr[@class='tableFilters']//td[15]//input"
-  account_name_input: "//*[@id='host-element']/input"
 FinancialTransactionsPage:
   client_name_element:  "(//td[3]/div/a)[%s]"
   transaction_type_element : "(//*[@id='listBody']//tr/td[5])[%s]"
@@ -127,6 +123,11 @@ MT4CreditOutModule:
   granted_by_filed: "//input[@id='transaction_grantedBy']"
   comment_filed: "//input[@id='transaction_comment']"
   create_button: "//button[contains(text(),'Create')]"
+TasksPage:
+  pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
+  subject_input: "//tr[@class='tableFilters']//td[15]//input"
+  account_name_input: "//*[@id='host-element']/input"
+  sms_icon: "//tr[@class='tableRow ng-star-inserted'][1]/td[@class='grid-actions-cell ng-star-inserted last-col col-pinned-right']/div[2]"
 TradingAccountsInformationPage:
   balance_text: "//td[contains(text(),'Balance')]//following-sibling::td[1]"
 WebTraderPage:
