--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,12 +1,12 @@
 tests_config:
 
 ###################################### MY DASHBOARD TESTS ########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
-#  class: MyDashboardActionsTest
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
+  class: MyDashboardActionsTest
+  tests:
 #    - test_edit_event_my_dashboard
 #    - test_email_icon
-#    - test_sms_icon
+    - test_sms_icon
 #    - test_sorting_columns
 #    - test_searching_by_columns
 #
@@ -48,7 +48,6 @@ tests_config:
 #  class: LeadModuleTest
 #  tests:
 #    - test_perform_convert_lead   # Creates a lead and converts it to a client
-#    - test_convert_lead_short
 #
 #################################### CLIENTS ###############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
@@ -219,12 +218,12 @@ tests_config:
 #    - test_dragon_clients
 
 ############################################## HELP DESK #################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_help_desk_module.Test_Help_Desk_Module
-  class: HelpDeskModuleTest
-  tests:
-    - test_create_ticket
-
-- module: src.test.python.ui.automation.implementation.crm.tests_help_desk_module.Test_Tab_Help_Desk
-  class: TabHelpDeskTest
-  tests:
-    - test_searching_help_desk
+#- module: src.test.python.ui.automation.implementation.crm.tests_help_desk_module.Test_Help_Desk_Module
+#  class: HelpDeskModuleTest
+#  tests:
+#    - test_create_ticket
+#
+#- module: src.test.python.ui.automation.implementation.crm.tests_help_desk_module.Test_Tab_Help_Desk
+#  class: TabHelpDeskTest
+#  tests:
+#    - test_searching_help_desk
